Some fixes for the Controller.h documentation
-Apparently it recognizes typedef structs, but it be like "I don't see a typedef doc". So the Arm_Command typedef now has documentaiton
-I was lazy (not suprised) about some of the documentation, and the sentences were not finished
-Documentation looks better because it only generates docs using documented objects

--- a/Armanipulator_Firmware/latex/_controller_8h.tex
+++ b/Armanipulator_Firmware/latex/_controller_8h.tex
@@ -8,14 +8,16 @@ Contains methods for controlling the motors and parsing input.
 {\ttfamily \#include $<$W\+String.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}Stepper\+Driver/src/\+Basic\+Stepper\+Driver.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}cpu\+\_\+map.\+h\char`\"{}}\newline
-Include dependency graph for Controller.\+h\+:\nopagebreak
+Include dependency graph for Controller.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{_controller_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:\nopagebreak
+This graph shows which files directly or indirectly include this file\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -26,9 +28,9 @@ This graph shows which files directly or indirectly include this file\+:\nopageb
 \begin{DoxyCompactItemize}
 \item 
 class \hyperlink{class_controller}{Controller}
-\begin{DoxyCompactList}\small\item\em The class-\/object used to interface between the serial interface and. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em The class-\/object used to interface between the serial interface and the stepper motor drivers. \end{DoxyCompactList}\item 
 struct \hyperlink{struct_controller_1_1arm__command}{Controller\+::arm\+\_\+command}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em The structure used to define the overall instruction parsed from serial input. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
