--- a/Armanipulator_Firmware/latex/files.tex
+++ b/Armanipulator_Firmware/latex/files.tex
@@ -1,9 +1,9 @@
 \section{File List}
-Here is a list of all files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{-_e_8d}{-\/\+E.\+d} }{\pageref{-_e_8d}}{}
-\item\contentsline{section}{\hyperlink{_controller_8cpp}{Controller.\+cpp} }{\pageref{_controller_8cpp}}{}
+Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{{\bfseries -\/\+E.\+d} }{\pageref{-_e_8d}}{}
+\item\contentsline{section}{{\bfseries Controller.\+cpp} }{\pageref{_controller_8cpp}}{}
 \item\contentsline{section}{\hyperlink{_controller_8h}{Controller.\+h} \\*Contains methods for controlling the motors and parsing input }{\pageref{_controller_8h}}{}
-\item\contentsline{section}{\hyperlink{cpu__map_8h}{cpu\+\_\+map.\+h} }{\pageref{cpu__map_8h}}{}
-\item\contentsline{section}{\hyperlink{sloeber_8ino_8cpp}{sloeber.\+ino.\+cpp} }{\pageref{sloeber_8ino_8cpp}}{}
-\item\contentsline{section}{\hyperlink{spec_8d}{spec.\+d} }{\pageref{spec_8d}}{}
+\item\contentsline{section}{{\bfseries cpu\+\_\+map.\+h} }{\pageref{cpu__map_8h}}{}
+\item\contentsline{section}{{\bfseries sloeber.\+ino.\+cpp} }{\pageref{sloeber_8ino_8cpp}}{}
+\item\contentsline{section}{{\bfseries spec.\+d} }{\pageref{spec_8d}}{}
 \end{DoxyCompactList}
