--- a/Armanipulator_Firmware/latex/annotated.tex
+++ b/Armanipulator_Firmware/latex/annotated.tex
@@ -1,7 +1,5 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\hyperlink{struct_controller_1_1arm__command}{Controller\+::arm\+\_\+command} }{\pageref{struct_controller_1_1arm__command}}{}
-\item\contentsline{section}{\hyperlink{class_controller}{Controller} \\*The class-\/object used to interface between the serial interface and }{\pageref{class_controller}}{}
-\item\contentsline{section}{\hyperlink{class_motor_config}{Motor\+Config} }{\pageref{class_motor_config}}{}
-\item\contentsline{section}{\hyperlink{class_pinout}{Pinout} }{\pageref{class_pinout}}{}
+\item\contentsline{section}{\hyperlink{struct_controller_1_1arm__command}{Controller\+::arm\+\_\+command} \\*The structure used to define the overall instruction parsed from serial input }{\pageref{struct_controller_1_1arm__command}}{}
+\item\contentsline{section}{\hyperlink{class_controller}{Controller} \\*The class-\/object used to interface between the serial interface and the stepper motor drivers }{\pageref{class_controller}}{}
 \end{DoxyCompactList}
